config("general_restful_sdk_using") {
  include_dirs = [ "." ]
}

shared_library("general_restful_sdk") {
  deps = [
    "//src/cloud189/restful:cloud189_uploader",
    "//src/cloud189/restful:folder_uploader",
    "//src/cloud189/restful/file_downloader",
    "//src/cloud189/restful/folder_downloader",
    "//src/cloud189/session_helper",
    "//src/general_restful_sdk/log_system",
    "//third_party/httpbusiness",
    "//third_party/jsoncpp",
  ]
  sources = [
    "ast_singleton.cpp",
    "ast_singleton.h",
    "solve_cloud189_uploader.cpp",
    "solve_cloud189_uploader.h",
    "solve_cloud189_folder_uploader.cpp",
    "solve_cloud189_folder_uploader.h",
    "solve_cloud189_downloader.cpp",
    "solve_cloud189_downloader.h",
    "solve_cloud189_folder_downloader.cpp",
    "solve_cloud189_folder_downloader.h",
    "general_restful_sdk.cpp",
    "general_restful_sdk.h",
    "pile.cpp",
  ]
  public = [
    "general_restful_sdk.h",
  ]
  configs += [ "//src:src_using" ]
  public_configs = [ ":general_restful_sdk_using" ]
}
