config("upload_dll_using") {
  include_dirs = [ "." ]
}

shared_library("upload_dll") {
  deps = [
    "//src/cloud189/restful:cloud189_uploader",
    "//src/cloud189/restful:folder_uploader",
    "//src/cloud189/restful/file_downloader:file_downloader",
    "//src/cloud189/session_helper",
    "//src/upload_dll/log_system",
    "//third_party/httpbusiness",
    "//third_party/jsoncpp",
  ]
  sources = [
    "ast_singleton.cpp",
    "ast_singleton.h",
    "solve_cloud189_uploader.cpp",
    "solve_cloud189_uploader.h",
    "solve_cloud189_folder_uploader.cpp",
    "solve_cloud189_folder_uploader.h",
    "solve_cloud189_downloader.cpp",
    "solve_cloud189_downloader.h",
    "upload_dll.cpp",
    "upload_dll.h",
    "pile.cpp",
  ]
  public = [
    "upload_dll.h",
  ]
  configs += [ "//src:src_using" ]
  public_configs = [ ":upload_dll_using" ]
}
