group("test_general_restful_sdk") {
  deps = [
    "//test/test_general_restful_sdk/test_general_restful_sdk",
    "//test/test_general_restful_sdk/test_cloud189_restful_file_downloader",
    "//test/test_general_restful_sdk/test_cloud189_folder_uploader",
    "//test/test_general_restful_sdk/test_cloud189_restful_folder_downloader",
  ]
}
